# cache-size

./: .envrc  .gitignore  .pre-commit-config.yaml  .travis.yml  Cargo.toml  LICENSE  README.md  flake.nix  rust-toolchain.toml  shell.nix
.github/workflows/: ci.yml  main.workflow  rust.yml
nix/: default.nix  sources.json
src/: blanket.rs  lib.rs  x86.rs
