[package]
authors = ["Bernardo Meurer <meurerbernardo@gmail.com>"]
categories = ["hardware-support", "memory-management"]
description = "A library for finding your L1/L2/L3 cache sizes "
edition = "2018"
keywords = ["memory", "performance", "line", "size", "cache"]
license = "BSD-3-Clause"
name = "cache-size"
readme = "./README.md"
repository = "https://github.com/lovesegfault/cache-size"
version = "0.4.0"

[badges]
maintenance = { status = "actively-developed" }
travis-ci = { repository = "lovesegfault/cache-size", branch = "master" }

[dependencies]
raw-cpuid = "7.0.3"
